compiler/CMLang/CMLangParser.py
# Generated from /Users/seankinzer/ACTLab/cmlang/cmlang.code/compiler/CMLang/CMLang.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CMLangParser ( Parser ):

    grammarFileName = "CMLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'complex'", "'string'", "'bool'", "'?'", 
                     "'input'", "'output'", "'state'", "'flow'", "'parameter'", 
                     "'spring'", "'reservoir'", "'component'", "'for'", 
                     "'while'", "'iterator'", "'!'", "'!='", "'+'", "'-'", 
                     "'/'", "'<'", "'<='", "'=='", "'>'", "'>='", "'*'", 
                     "'^'", "'fread'", "'fwrite'", "'float'", "'bin'", "'int'", 
                     "'max'", "'argmax'", "'min'", "'argmin'", "'e'", "'pi'", 
                     "'sum'", "'norm'", "'gaussian'", "'sigmoid'", "'ceiling'", 
                     "'sigmoid_symmetric'", "'log'", "'log2'", "'random'", 
                     "';'", "':'", "'['", "']'", "'}'", "'{'", "'('", "')'", 
                     "','", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INPUT", "OUTPUT", "STATE", "FLOW", "PARAMETER", 
                      "SPRING", "RESERVOIR", "COMPONENT", "FOR", "WHILE", 
                      "ITERATOR", "NOT", "NOTEQ", "ADD", "SUB", "DIV", "LT", 
                      "LEQ", "EQUAL", "GT", "GEQ", "MUL", "POW", "FILE_READ", 
                      "FILE_WRITE", "FLOAT_FUNC", "BINARY_FUNC", "INT_FUNC", 
                      "MAX", "ARGMAX", "MIN", "ARGMIN", "E", "PI", "SUM", 
                      "NORM", "GAUSSIAN", "SIGMOID", "CEILING", "SIG_SYM", 
                      "LOG", "LOG2", "RANDOM", "SEMI", "COLON", "LEFT_BRACK", 
                      "RIGHT_BRACK", "RIGHT_CURLY", "LEFT_CURLY", "LEFT_PAREN", 
                      "RIGHT_PAREN", "COMMA", "ASSIGN", "ID", "WHITESPACE", 
                      "COMMENT", "STRING", "DECIMAL_INTEGER", "OCT_INTEGER", 
                      "HEX_INTEGER", "BIN_INTEGER", "FLOAT_NUMBER", "IMAG_NUMBER" ]

    RULE_number = 0
    RULE_integer = 1
    RULE_val_type = 2
    RULE_program = 3
    RULE_component_list = 4
    RULE_component_definition = 5
    RULE_component_parameters = 6
    RULE_arg_list = 7
    RULE_default_param_value = 8
    RULE_flow_def_index = 9
    RULE_arg = 10
    RULE_parameter_arg_def = 11
    RULE_arg_type = 12
    RULE_component_type = 13
    RULE_component_body = 14
    RULE_statement_list = 15
    RULE_statement = 16
    RULE_primitive = 17
    RULE_data_decl = 18
    RULE_flow_declaration = 19
    RULE_iterator_declaration = 20
    RULE_power = 21
    RULE_iterator = 22
    RULE_flow = 23
    RULE_var_list_flow = 24
    RULE_var_list_flow_tail = 25
    RULE_var_list = 26
    RULE_var = 27
    RULE_var_id = 28
    RULE_id_tail = 29
    RULE_flow_index = 30
    RULE_var_list_tail = 31
    RULE_var_list_iterator = 32
    RULE_component_inst = 33
    RULE_call_param_id = 34
    RULE_comp_param_id = 35
    RULE_comp_param_list = 36
    RULE_comp_param_list_tail = 37
    RULE_call_param_list = 38
    RULE_call_param_list_tail = 39
    RULE_file_function = 40
    RULE_file_operation = 41
    RULE_function = 42
    RULE_predicate = 43
    RULE_logic = 44
    RULE_add_sub = 45
    RULE_mul_div = 46
    RULE_expr = 47
    RULE_logical_expr = 48
    RULE_add_sub_expr = 49
    RULE_factor = 50
    RULE_signed_value = 51
    RULE_atom = 52
    RULE_function_args = 53
    RULE_cond_loop = 54
    RULE_iter_expression = 55

    ruleNames =  [ "number", "integer", "val_type", "program", "component_list", 
                   "component_definition", "component_parameters", "arg_list", 
                   "default_param_value", "flow_def_index", "arg", "parameter_arg_def", 
                   "arg_type", "component_type", "component_body", "statement_list", 
                   "statement", "primitive", "data_decl", "flow_declaration", 
                   "iterator_declaration", "power", "iterator", "flow", 
                   "var_list_flow", "var_list_flow_tail", "var_list", "var", 
                   "var_id", "id_tail", "flow_index", "var_list_tail", "var_list_iterator", 
                   "component_inst", "call_param_id", "comp_param_id", "comp_param_list", 
                   "comp_param_list_tail", "call_param_list", "call_param_list_tail", 
                   "file_function", "file_operation", "function", "predicate", 
                   "logic", "add_sub", "mul_div", "expr", "logical_expr", 
                   "add_sub_expr", "factor", "signed_value", "atom", "function_args", 
                   "cond_loop", "iter_expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    INPUT=5
    OUTPUT=6
    STATE=7
    FLOW=8
    PARAMETER=9
    SPRING=10
    RESERVOIR=11
    COMPONENT=12
    FOR=13
    WHILE=14
    ITERATOR=15
    NOT=16
    NOTEQ=17
    ADD=18
    SUB=19
    DIV=20
    LT=21
    LEQ=22
    EQUAL=23
    GT=24
    GEQ=25
    MUL=26
    POW=27
    FILE_READ=28
    FILE_WRITE=29
    FLOAT_FUNC=30
    BINARY_FUNC=31
    INT_FUNC=32
    MAX=33
    ARGMAX=34
    MIN=35
    ARGMIN=36
    E=37
    PI=38
    SUM=39
    NORM=40
    GAUSSIAN=41
    SIGMOID=42
    CEILING=43
    SIG_SYM=44
    LOG=45
    LOG2=46
    RANDOM=47
    SEMI=48
    COLON=49
    LEFT_BRACK=50
    RIGHT_BRACK=51
    RIGHT_CURLY=52
    LEFT_CURLY=53
    LEFT_PAREN=54
    RIGHT_PAREN=55
    COMMA=56
    ASSIGN=57
    ID=58
    WHITESPACE=59
    COMMENT=60
    STRING=61
    DECIMAL_INTEGER=62
    OCT_INTEGER=63
    HEX_INTEGER=64
    BIN_INTEGER=65
    FLOAT_NUMBER=66
    IMAG_NUMBER=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer(self):
            return self.getTypedRuleContext(CMLangParser.IntegerContext,0)


        def FLOAT_NUMBER(self):
            return self.getToken(CMLangParser.FLOAT_NUMBER, 0)

        def IMAG_NUMBER(self):
            return self.getToken(CMLangParser.IMAG_NUMBER, 0)

        def getRuleIndex(self):
            return CMLangParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = CMLangParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_number)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CMLangParser.DECIMAL_INTEGER, CMLangParser.OCT_INTEGER, CMLangParser.HEX_INTEGER, CMLangParser.BIN_INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.integer()
                pass
            elif token in [CMLangParser.FLOAT_NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(CMLangParser.FLOAT_NUMBER)
                pass
            elif token in [CMLangParser.IMAG_NUMBER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(CMLangParser.IMAG_NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntegerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_INTEGER(self):
            return self.getToken(CMLangParser.DECIMAL_INTEGER, 0)

        def OCT_INTEGER(self):
            return self.getToken(CMLangParser.OCT_INTEGER, 0)

        def HEX_INTEGER(self):
            return self.getToken(CMLangParser.HEX_INTEGER, 0)

        def BIN_INTEGER(self):
            return self.getToken(CMLangParser.BIN_INTEGER, 0)

        def getRuleIndex(self):
            return CMLangParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = CMLangParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not(((((_la - 62)) & ~0x3f) == 0 and ((1 << (_la - 62)) & ((1 << (CMLangParser.DECIMAL_INTEGER - 62)) | (1 << (CMLangParser.OCT_INTEGER - 62)) | (1 << (CMLangParser.HEX_INTEGER - 62)) | (1 << (CMLangParser.BIN_INTEGER - 62)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Val_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CMLangParser.RULE_val_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVal_type" ):
                listener.enterVal_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVal_type" ):
                listener.exitVal_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVal_type" ):
                return visitor.visitVal_type(self)
            else:
                return visitor.visitChildren(self)




    def val_type(self):

        localctx = CMLangParser.Val_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_val_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CMLangParser.T__0) | (1 << CMLangParser.T__1) | (1 << CMLangParser.T__2) | (1 << CMLangParser.FLOAT_FUNC) | (1 << CMLangParser.INT_FUNC))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_list(self):
            return self.getTypedRuleContext(CMLangParser.Component_listContext,0)


        def EOF(self):
            return self.getToken(CMLangParser.EOF, 0)

        def getRuleIndex(self):
            return CMLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CMLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.component_list()
            self.state = 122
            self.match(CMLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Component_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangParser.Component_definitionContext)
            else:
                return self.getTypedRuleContext(CMLangParser.Component_definitionContext,i)


        def getRuleIndex(self):
            return CMLangParser.RULE_component_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent_list" ):
                listener.enterComponent_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent_list" ):
                listener.exitComponent_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent_list" ):
                return visitor.visitComponent_list(self)
            else:
                return visitor.visitChildren(self)




    def component_list(self):

        localctx = CMLangParser.Component_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_component_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.component_definition()
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CMLangParser.SPRING) | (1 << CMLangParser.RESERVOIR) | (1 << CMLangParser.COMPONENT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Component_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_type(self):
            return self.getTypedRuleContext(CMLangParser.Component_typeContext,0)


        def ID(self):
            return self.getToken(CMLangParser.ID, 0)

        def component_parameters(self):
            return self.getTypedRuleContext(CMLangParser.Component_parametersContext,0)


        def component_body(self):
            return self.getTypedRuleContext(CMLangParser.Component_bodyContext,0)


        def getRuleIndex(self):
            return CMLangParser.RULE_component_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent_definition" ):
                listener.enterComponent_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent_definition" ):
                listener.exitComponent_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent_definition" ):
                return visitor.visitComponent_definition(self)
            else:
                return visitor.visitChildren(self)




    def component_definition(self):

        localctx = CMLangParser.Component_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_component_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.component_type()
            self.state = 130
            self.match(CMLangParser.ID)
            self.state = 131
            self.component_parameters()
            self.state = 132
            self.component_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Component_parametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(CMLangParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(CMLangParser.RIGHT_PAREN, 0)

        def arg_list(self):
            return self.getTypedRuleContext(CMLangParser.Arg_listContext,0)


        def getRuleIndex(self):
            return CMLangParser.RULE_component_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent_parameters" ):
                listener.enterComponent_parameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent_parameters" ):
                listener.exitComponent_parameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent_parameters" ):
                return visitor.visitComponent_parameters(self)
            else:
                return visitor.visitChildren(self)




    def component_parameters(self):

        localctx = CMLangParser.Component_parametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_component_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(CMLangParser.LEFT_PAREN)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CMLangParser.INPUT) | (1 << CMLangParser.OUTPUT) | (1 << CMLangParser.STATE) | (1 << CMLangParser.PARAMETER))) != 0):
                self.state = 135
                self.arg_list()


            self.state = 138
            self.match(CMLangParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arg_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLangParser.ArgContext)
            else:
                return self.getTypedRuleContext(CMLangParser.ArgContext,i)


        def getRuleIndex(self):
            return CMLangParser.RULE_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_list" ):
                listener.enterArg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_list" ):
                listener.exitArg_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg_list" ):
                return visitor.visitArg_list(self)
            else:
                return visitor.visitChildren(self)




    def arg_list(self):

        localctx = CMLangParser.Arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.arg()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CMLangParser.COMMA:
                self.state = 141
                self.match(CMLangParser.COMMA)
                self.state = 142
                self.arg()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Default_param_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CMLangParser.STRING, 0)

        def number(self):
            return self.getTypedRuleContext(CMLangParser.NumberContext,0)


        def getRuleIndex(self):
            return CMLangParser.RULE_default_param_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefault_param_value" ):
                listener.enterDefault_param_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefault_param_value" ):
                listener.exitDefault_param_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefault_param_value" ):
                return visitor.visitDefault_param_value(self)
            else:
                return visitor.visitChildren(self)




    def default_param_value(self):

        localctx = CMLangParser.Default_param_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_default_param_value)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CMLangParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(CMLangParser.STRING)
                pass
            elif token in [CMLangParser.DECIMAL_INTEGER, CMLangParser.OCT_INTEGER, CMLangParser.HEX_INTEGER, CMLangParser.BIN_INTEGER, CMLangParser.FLOAT_NUMBER, CMLangParser.IMAG_NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.number()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Flow_def_indexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CMLangParser.ID, 0)

        def getRuleIndex(self):
            return CMLangParser.RULE_flow_def_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_def_index" ):
                listener.enterFlow_def_index(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_def_index" ):
                listener.exitFlow_def_index(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlow_def_index" ):
                return visitor.visitFlow_def_index(self)
            else:
                return visitor.visitChildren(self)




    def flow_def_index(self):

        localctx = CMLangParser.Flow_def_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_flow_def_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(CMLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg_type(self):
            return self.getTypedRuleContext(CMLangParser.Arg_typeContext,0)


        def val_type(self):
            return self.getTypedRuleContext(CMLangParser.Val_typeContext,0)


        def ID(self):
            return self.getToken(CMLangParser.ID, 0)

        def parameter_arg_def(self):
            return self.getTypedRuleContext(CMLangParser.Parameter_arg_defContext,0)


        def LEFT_BRACK(self, i:int=None):
            if i is None:
                return self.getTokens(CMLangParser.LEFT_BRACK)
            else:
                return self.getToken(CMLangParser.LEFT_BRACK, i)
